removed ip based showcase of fixed banner and made it visible to all ips

--- a/source/assets/stylesheets/components/_fixed-banner.scss
+++ b/source/assets/stylesheets/components/_fixed-banner.scss
@@ -11,7 +11,6 @@
   background-color: rgba(74, 217, 217, 100);
   color: #333;
   z-index: 1000;
-  display: none;
 
   &:hover {
     background-color: #87e1e0;
@@ -25,10 +24,6 @@
   @media (min-width: $screen-md) {
     height: 60px;
   }
-}
-
-.show-banner {
-  display: flex;
 }
 
 .fixed-banner-close {
